toolchain/internal/core/analysis/testdata/errors/structure/duplicate_field_type.vdl
// @expect: E701

type User {
  id string
  id string
}
